k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasks
  labels:
    app.kubernetes.io/part-of: tasks
